--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "styled-components": "^5.3.0",
+    "tsparticles": "^1.31.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
